--- a/impressum.html
+++ b/impressum.html
@@ -217,7 +217,7 @@
                         <i class="fab fa-facebook" aria-hidden="true"></i>
                         <span class="sr-only">Facebook</span>
                     </a>
-                    <a href="#" target="_blank" aria-label="Instagram Seite des Hundecoiffeurs">
+                    <a href="https://www.instagram.com/salon_fellnasen/" target="_blank" aria-label="Instagram Seite des Hundecoiffeurs">
                         <i class="fab fa-instagram" aria-hidden="true"></i>
                         <span class="sr-only">Instagram</span>
                     </a>
