--- a/impressum.html
+++ b/impressum.html
@@ -213,11 +213,11 @@
             <div class="footer-section">
                 <h4>Folgen Sie uns</h4>
                 <div class="social-links">
-                    <a href="https://www.facebook.com/profile.php?id=61574518246180" target="_blank" aria-label="Facebook Seite des Hundecoiffeurs">
+                    <a href="https://www.facebook.com/profile.php?id=61574518246180" target="_blank" rel="noopener" aria-label="Facebook Seite des Hundecoiffeurs">
                         <i class="fab fa-facebook" aria-hidden="true"></i>
                         <span class="sr-only">Facebook</span>
                     </a>
-                    <a href="https://www.instagram.com/salon_fellnasen/" target="_blank" aria-label="Instagram Seite des Hundecoiffeurs">
+                    <a href="https://www.instagram.com/salon_fellnasen/" target="_blank" rel="noopener" aria-label="Instagram Seite des Hundecoiffeurs">
                         <i class="fab fa-instagram" aria-hidden="true"></i>
                         <span class="sr-only">Instagram</span>
                     </a>
