📝 Aktualisiere Impressum und Index: Ersetze Logo durch invertierte Version, aktualisiere das Jahr im Impressum auf 2025, verbessere Kontaktinformationen mit klickbaren Links für Telefonnummer und Adresse. Diese Änderungen optimieren die Benutzererfahrung und sorgen für eine ansprechendere Darstellung der Informationen.

--- a/impressum.html
+++ b/impressum.html
@@ -307,7 +307,7 @@
             <div class="grid md:grid-cols-3 gap-8">
                 <div>
                     <div class="flex items-center mb-4">
-                        <img src="logo.png" alt="Salon Fellnasen Logo" class="h-10 w-10 mr-3">
+                        <img src="logo_invertiert.png" alt="Salon Fellnasen Logo" class="h-10 w-10 mr-3">
                         <span class="text-xl font-bold">Salon Fellnasen</span>
                     </div>
                     <p class="text-gray-400 leading-relaxed">Ihr professioneller Hundecoiffeur in Rüegsauschachen für liebevolle Hundepflege.</p>
@@ -333,7 +333,7 @@
             </div>
             
             <div class="border-t border-gray-800 mt-12 pt-8 text-center text-gray-400">
-                <p>&copy; 2024 Hundecoiffeur Salon Fellnasen. Alle Rechte vorbehalten.</p>
+                <p>&copy; 2025 Hundecoiffeur Salon Fellnasen. Alle Rechte vorbehalten.</p>
                 <a href="impressum.html" class="text-primary hover:text-secondary transition-colors duration-300 ml-4">Impressum</a>
             </div>
         </div>
