--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                 <div class="mt-16" data-aos="fade-up" data-aos-delay="400">
                     <div class="bg-white rounded-3xl p-4 custom-shadow">
                         <iframe 
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2715.474392!2d7.6619462!3d47.0136972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478e6bba9c7c1b4d%3A0x8b8a9e7c6d5b9c8e!2sEmmensteg%2011%2C%203415%20R%C3%BCegsauschachen%2C%20Switzerland!5e0!3m2!1sen!2sch!4v1635789456789!5m2!1sen!2sch"
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1360.1729168169732!2d7.6611125!3d47.0138163!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478e33e7e8369b7b%3A0xa020a19e198f5935!2sSalon%20Fellnasen%20-%20Hundecoiffeur%2Ffriseur!5e0!3m2!1sde!2sch!4v1750698934198!5m2!1sde!2sch"
                             width="100%" 
                             height="400" 
                             allowfullscreen="" 
@@ -552,7 +552,7 @@
             <div class="grid md:grid-cols-3 gap-8">
                 <div data-aos="fade-up">
                     <div class="flex items-center mb-4">
-                        <img src="logo.png" alt="Salon Fellnasen Logo" class="h-10 w-10 mr-3">
+                        <img src="logo_invertiert.png" alt="Salon Fellnasen Logo" class="h-10 w-10 mr-3">
                         <span class="text-xl font-bold">Salon Fellnasen</span>
                     </div>
                     <p class="text-gray-400 leading-relaxed">Ihr professioneller Hundecoiffeur in Rüegsauschachen für liebevolle Hundepflege.</p>
@@ -561,8 +561,8 @@
                 <div data-aos="fade-up" data-aos-delay="200">
                     <h4 class="text-lg font-semibold mb-4">Kontakt</h4>
                     <div class="space-y-2 text-gray-400">
-                        <p><i class="fas fa-phone w-5"></i> +41 77 417 36 20</p>
-                        <p><i class="fas fa-map-marker-alt w-5"></i> Emmensteg 11, 3415 Rüegsauschachen</p>
+                        <p><i class="fas fa-phone w-5"></i><a href="tel:+41774173620" target="_blank" rel="noopener">+41 77 417 36 20</a></p>
+                        <p><i class="fas fa-map-marker-alt w-5"></i><a href="https://maps.app.goo.gl/fKAw9kXW7WM6g4CY6" target="_blank" rel="noopener">Emmensteg 11, 3415 Rüegsauschachen</a></p>
                     </div>
                 </div>
                 
@@ -578,7 +578,7 @@
             </div>
             
             <div class="border-t border-gray-800 mt-12 pt-8 text-center text-gray-400">
-                <p>&copy; 2024 Hundecoiffeur Salon Fellnasen. Alle Rechte vorbehalten.</p>
+                <p>&copy; 2025 Hundecoiffeur Salon Fellnasen. Alle Rechte vorbehalten.</p>
                 <a href="impressum.html" class="text-primary hover:text-secondary transition-colors duration-300 ml-4">Impressum</a>
             </div>
         </div>
