--- a/impressum.html
+++ b/impressum.html
@@ -230,7 +230,7 @@
                                         <i class="fas fa-phone text-primary text-xl"></i>
                                         <div>
                                             <p class="font-medium text-gray-800">Telefon</p>
-                                            <p class="text-gray-600">+41 77 417 36 20</p>
+                                            <p class="text-gray-600"><a href="tel:+41774173620">+41 77 417 36 20</a></p>
                                         </div>
                                     </div>
                                 </div>
@@ -239,7 +239,7 @@
                                         <i class="fas fa-envelope text-primary text-xl"></i>
                                         <div>
                                             <p class="font-medium text-gray-800">E-Mail</p>
-                                            <p class="text-gray-600">info@salon-fellnasen.ch</p>
+                                            <p class="text-gray-600"><a href="mailto:support@salon-fellnasen.ch">support@salon-fellnasen.ch</a></p>
                                         </div>
                                     </div>
                                 </div>
@@ -441,14 +441,8 @@
                 window.requestAnimationFrame(() => {
                     const navbar = document.getElementById('navbar');
                     if (navbar) {
-                        if (currentScroll > 50) {
-                            navbar.classList.add('bg-white/95', 'backdrop-blur-lg', 'shadow-lg');
-                            navbar.classList.remove('bg-white/80');
-                        } else {
-                            navbar.classList.add('bg-white/80');
-                            navbar.classList.remove('bg-white/95', 'backdrop-blur-lg', 'shadow-lg');
-                        }
-                        
+                        // Glassmorphismus bleibt IMMER aktiv - keine Änderung der backdrop-filter Klassen
+                        // Nur Hide/show navbar on scroll
                         if (currentScroll <= 0) {
                             navbar.style.transform = 'translateY(0)';
                         } else if (currentScroll > lastKnownScrollPosition && currentScroll > 200) {
