📝 Aktualisiere Impressum und Index: Ersetze die Dateiendung von "impressum.html" auf "impressum" für konsistentere URL-Struktur. Diese Änderung verbessert die Benutzererfahrung und sorgt für eine klarere Navigation auf der Website.

--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
             
             <div class="border-t border-gray-800 mt-12 pt-8 text-center text-gray-400">
                 <p>&copy; 2025 Hundecoiffeur Salon Fellnasen. Alle Rechte vorbehalten.</p>
-                <a href="impressum.html" class="text-primary hover:text-secondary transition-colors duration-300 ml-4">Impressum</a>
+                <a href="impressum" class="text-primary hover:text-secondary transition-colors duration-300 ml-4">Impressum</a>
             </div>
         </div>
     </footer>
